Split assignemtns into separate files

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
     <h1>Recursion</h1>
   </header>
   <main>
-    <h2>Check dat console</h2>
+    <h2>Check that console</h2>
   </main>
   <footer>
     <p>&copy;</p>
   </footer>
-  <script src="scripts.js"></script>
+  <script src="fibonacci.js"></script>
+  <script src="mergeSort.js"></script>
 </body>
 </html>
